# lagertha-vm

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
javap/: Cargo.toml
javap/src/: main.rs
javap/tests/: integration_test.rs
jimage/: Cargo.toml
openspec/changes/add-jasm-disassembler/: design.md
runtime/: Cargo.toml
vm/: Cargo.toml
