[package]
name = "javap"
version = "0.1.0"
edition = "2024"

[dependencies]
jclass = { package = "lvm-class", version = "0.1.0", features = ["javap_print"] }
sha2 = "0.10.9"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
rstest = "0.26.1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tempfile = "3"